2010-02-16  Glenn Morris  <rgm@gnu.org>

	* message.el (message-default-mail-headers): Change the default value
	to ease the transition from mail-mode to message-mode.  (Bug#5555)

2010-01-17  Chong Yidong  <cyd@stupidchicken.com>

	* message.el (message-mail): Just pass yank-action on to message-setup.
	(message-setup): Handle (FUN . ARGS) form of yank-action.
	(message-with-reply-buffer, message-widen-reply)
	(message-yank-original): Handle non-buffer values of
	message-reply-buffer (Bug#4080).
	(message-setup-1): Prefer to save message-reply-buffer as a buffer.

2010-01-17  Juanma Barranquero  <lekktu@gmail.com>

	* nnmairix.el (nnmairix-group-delete-recreate-this-group):
	Fix typo in docstring.

2010-01-08  Jason Rumney  <jasonr@gnu.org>

	* sieve-manage.el (sieve-manage-parse-capability-1): Loosely match OK
	response.

2010-01-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-describe-bindings): Work for prefix keys.

	* message.el (message-check-news-header-syntax): Protect against a
	string that `rfc822-addresses' returns when parsing fails.

2010-01-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-util.el (gnus-invisible-p, gnus-next-char-property-change)
	(gnus-previous-char-property-change): New functions.

	* gnus-sum.el (gnus-forward-line-ignore-invisible): Use them.

2010-01-05  Andreas Schwab  <schwab@linux-m68k.org>

	* gnus-sum.el (gnus-forward-line-ignore-invisible): New function.
	(gnus-summary-recenter): Use it instead of forward-line.  (Bug#5257)

2010-01-02  Chong Yidong  <cyd@stupidchicken.com>

	* message.el (message-exchange-point-and-mark): Rework last change to
	avoid using optional arg of exchange-point-and-mark, for backward
	compatibility.

2010-01-01  Chong Yidong  <cyd@stupidchicken.com>

	* message.el (message-exchange-point-and-mark): Call
	exchange-point-and-mark with an argument rather than setting
	mark-active by hand (Bug#5175).

2009-12-18  Katsumi Yamaoka  <yamaoka@jpl.org>
