@@ -1,3 +1,8 @@
+2010-02-24  Glenn Morris  <rgm@gnu.org>
+
+	* message.el (message-smtpmail-send-it)
+	(message-send-mail-with-mailclient): Doc fixes.
+
 2010-02-16  Glenn Morris  <rgm@gnu.org>
 
 	* message.el (message-default-mail-headers): Change the default value
